# ParserAutoData

./: README.MD  app.py  main.py  pyproject.toml
bot/: start_bot.py
domain/dataproviders/: drom.py  dvadvornikaru.py
domain/models/: dromru.py  dvadvornikaru.py
downloader/: httpdownloader.py  params.py
filewriter/: excel.py  params.py
normalizer/: drom_norm.py  dvadvornikaru.py  proper_names.py
parser/dromru/: html_parser.py
parser/twodvornikaru/: htmlparser.py
tests/: conftest.py  test_normalizer.py  test_utils.py
utils/: brands.txt  dirs_files_checker.py  dirs_files_handler.py  excel_parser.py  logging_settings.py  mark_duration.py  models_names_handler.py  pickle_checker.py
